# tpDcc-config

./: .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
tests/: test_general.py
tpDcc/: __init__.py
tpDcc/config/: __init__.py  __version__.py  _version.py
tpDcc/config/development/: tpDcc-core.yml  tpDcc-interface.yml  tpDcc-libs-curves.yml  tpDcc-tools-frameless_toggle.yml  tpDcc-tools-hub.yml  tpDcc-tools-nameit.yml  tpDcc-tools-renamer.yml  tpDcc-tools.yml
tpDcc/config/development/maya/: tpDcc-naming.yml  tpDcc-tools-renamer.yml
tpDcc/config/production/: tpDcc-core.yml  tpDcc-interface.yml  tpDcc-naming.yml  tpDcc-tools-nameit.yml  tpDcc-tools-renamer.yml
tpDcc/config/production/maya/: tpDcc-naming.yml  tpDcc-tools-renamer.yml
